--- a/src/SASS/_view-revies.scss
+++ b/src/SASS/_view-revies.scss
@@ -42,7 +42,7 @@
 
   @include desktop {
     font-size: 2.5rem;
-    margin: 6rem 0 4rem 0;
+    margin: 5rem 0 3rem 0;
   }
 
 }
@@ -120,6 +120,11 @@ display: flex;
 align-items: center;
 justify-content: center;
 gap: 1rem;
+
+@include desktop {
+           grid-column: 1 / -1;
+           margin: 7.5rem 0 9rem 0;
+        }
 
 &_p {
     margin:0;
