--- a/src/SASS/main.css
+++ b/src/SASS/main.css
@@ -1182,7 +1182,7 @@ body {
 @media screen and (min-width: 1018px) {
   .review-title {
     font-size: 2.5rem;
-    margin: 6rem 0 4rem 0;
+    margin: 5rem 0 3rem 0;
   }
 }
 
@@ -1246,6 +1246,12 @@ body {
   align-items: center;
   justify-content: center;
   gap: 1rem;
+}
+@media screen and (min-width: 1018px) {
+  .review-pagination {
+    grid-column: 1/-1;
+    margin: 7.5rem 0 9rem 0;
+  }
 }
 .review-pagination_p {
   margin: 0;
